Fix signature colors on dark mode

--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -58,6 +58,9 @@
     --link-underline-shadow: 0 1px 0 var(--link-color);
     --link-hover-underline-color: var(--link-hover-color);
     --link-hover-underline-shadow: 0 2px 0 var(--link-hover-underline-color);
+
+    --signature: var(--primary);
+    --signature-bg: var(--secondary);
 }
 
 .list-page {
